# quetzal

./: .gitignore  CMakeLists.txt  README.md  main.cpp
core/: engine.cpp  engine.h  expanded_math.cpp  resource_manager.cpp  resource_manager.h  scene.cpp  scene.h
core/physics/: colliding_ray.cpp
core/rendering/: buffer_layout.h  buffers_objects.cpp  camera.cpp  camera.h  element_buffer.h  gui.h  lights.cpp  lights.h  post_processing.cpp  post_processing.h  renderer.cpp  renderer.h  shader_program.cpp  shader_program.h  vertex.h  vertex_array.cpp
include/: base_classes.h  billboard.h  billboards.h  buffer_layout.h  buffers_objects.h  camera.h  colliding_ray.h  collision.h  debugger.h  engine.h  expanded_math.h  gui.h  lights.h  mesh.h  model.h  node.h  physics.h  post_processing.h  renderable_object.h  renderer.h  resource_manager.h  rigid_body.h  scene.h  shader.h  texture.h  vertex.h  vertex_array.h
res/objects/catcube/: catcube.blend  catcube.mtl
res/objects/catsphere/: catsphere.blend  catsphere.mtl
res/objects/ena/: ena.mtl
res/postprocess/: sharpen.frag
res/screen_shaders/: grayscale.frag  inversion_color.frag  post_processing.vert
res/shaders/: collision.vert  default.frag  default.fs  default.vert  default.vs  inversion_color.frag  light.frag  post_processing.vert  skybox.vert
scene/3d/: billboard.cpp  billboard.h  cylindrical_billboard.cpp  cylindrical_billboard.h  directional_light3d.cpp  directional_light3d.h  light3d.h  node3d.cpp  node3d.h  point_light3d.cpp  point_light3d.h  rigid_body.cpp  rigid_body.h  spherical_billboard.cpp  spherical_billboard.h  spot_light3d.cpp  spot_light3d.h  static_body.cpp  static_body.h
scene/main/: node.cpp  node.h  resource.h
scene/resources/: mesh.cpp  mesh.h  model.cpp  model.h  shader.h  texture.cpp  texture.h
src/: base_classes.cpp  billboard.cpp  billboards.cpp  buffers_objects.cpp  camera.cpp  colliding_ray.cpp  collision.cpp  debugger.cpp  engine.cpp  expanded_math.cpp  gui.cpp  lights.cpp  main.cpp  mesh.cpp  model.cpp  node.cpp  physics.cpp  post_processing.cpp  renderable_object.cpp  renderer.cpp  resource_manager.cpp  rigid_body.cpp  scene.cpp  shader.cpp  texture.cpp  vertex_array.cpp
src/core/: debugger.h  engine.cpp  engine.h  expanded_math.h  node_container.cpp  node_container.h  object.cpp  object.h  resource_manager.cpp  resource_manager.h  scene.cpp  scene.h
src/core/gui/: engine_window.cpp  engine_window.h  gui.cpp  gui.h  node_window.cpp  node_window.h  window.cpp  window.h
src/core/physics/: colliding_ray.cpp  colliding_ray.h  physics.cpp
src/core/rendering/: buffer_layout.h  camera.cpp  camera.h  element_buffer.cpp  gui.cpp  post_processing.cpp  post_processing.h  renderer.cpp  renderer.h  shader_program.cpp  shader_program.h  vertex.cpp  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.cpp  vertex_buffer_layout.h
src/core/visitors/: camera_visitor.cpp  camera_visitor.h  gui_visitor.cpp  gui_visitor.h  node_visitor.h  physics_visitor.cpp  physics_visitor.h  renderer_visitor.cpp  renderer_visitor.h
src/gl/: VAO.cpp  VAO.h  VBO.cpp  VBO.h  billboard.cpp  billboard.h  camera.cpp  camera.h  lights.cpp  lights.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  texture.cpp  texture.h
src/scene/3d/: billboard.cpp  billboard.h  box_collision.cpp  box_collision.h  collision.cpp  collision.h  cylindrical_billboard.cpp  cylindrical_billboard.h  directional_light3d.cpp  directional_light3d.h  light3d.cpp  light3d.h  model3d.cpp  model3d.h  node3d.cpp  node3d.h  physics_node3d.cpp  physics_node3d.h  point_light3d.cpp  point_light3d.h  rigid_body.cpp  rigid_body.h  rigid_body3d.cpp  rigid_body3d.h  skybox.cpp  skybox.h  sphere_collision.cpp  sphere_collision.h  spherical_billboard.cpp  spherical_billboard.h  spot_light3d.cpp  spot_light3d.h  static_body.cpp  static_body.h  static_body3d.cpp  static_body3d.h  visual_node3d.cpp  visual_node3d.h
src/scene/main/: node.cpp  node.h  resource.cpp  resource.h
src/scene/resources/: mesh.cpp  mesh.h  shader.cpp  shader.h  texture.cpp  texture.h
src/static/: gui.cpp  gui.h  input.cpp  input.h  physics.cpp  physics.h  renderer.cpp  renderer.h  resource_manager.cpp  resource_manager.h  variant.cpp  variant.h
